# Access_Dependency_Analyzer

./: .gitignore  README.md  pyproject.toml  requirements.txt
.docs/: update.md
assets/ui/: index.html
src/access_dependency_analyzer/: __init__.py  __main__.py  main.py
src/access_dependency_analyzer/analyzers/: __init__.py  analysis_service.py  dependency_analyzer.py  form_report_analyzer.py  link_analyzer.py  merge_service.py  query_analyzer.py  table_analyzer.py  vba_analyzer.py
src/access_dependency_analyzer/app/: __init__.py  api.py  drag_drop.py
src/access_dependency_analyzer/core/: __init__.py  constants.py  logging_config.py  models.py
src/access_dependency_analyzer/exporters/: __init__.py  ai_report_exporter.py  csv_exporter.py  csv_loader.py  export_service.py  html_exporter.py  incomplete_marker.py  markdown_exporter.py  mermaid_exporter.py
src/access_dependency_analyzer/readers/: __init__.py  access_reader.py  file_resolver.py  vba_dao_reader.py  vba_oletools_reader.py  vba_pyopenvba_reader.py  vba_reader.py  vba_types.py
src/access_dependency_analyzer/utils/: connection_parser.py  path_utils.py  sql_parser.py
tests/: conftest.py
tests/unit/: test_access_reader.py  test_connection_parser.py  test_constants.py  test_dependency_analyzer.py  test_drag_drop.py  test_file_resolver.py  test_form_report_analyzer.py  test_incomplete_marker.py  test_merge_service.py  test_mermaid_exporter.py  test_path_utils.py  test_sql_parser.py  test_vba_reader.py
